# spiceroute-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_savor_global.py  0003_firebase_users.py  0004_calories.py  0005_vietnamese_cuisine.py  0006_french_cuisine.py  0007_drop_redundant_indexes.py  0008_align_spice_routes_user_fk.py  0009_add_five_cuisines.py  0010_add_translations.py  0011_add_v4_cuisines.py  0012_add_difficulty.py  0013_recipe_throttle_tables.py  0014_add_v5_east_asia_cuisines.py  0015_add_v7_myanmar_cuisines.py  0016_retag_chinese_provincial_recipes.py  0017_retag_subnational_cuisines.py  0018_widen_image_path.py
app/: main.py
app/api/: ai.py  auth.py  favorites.py  health.py  mecipes.py  spice_routes.py  tags.py  uploads.py
app/core/: config.py  deps.py  security.py
app/db/: base.py  session.py
app/models/: __init__.py  cuisine.py  cuisine_catalog.py  difficulty.py  favorite.py  mecipe.py  spice_route.py  tag.py  user.py
app/schemas/: auth.py  mecipe.py  spice_route.py  user.py
app/services/: firebase.py  locale_request.py  mecipes.py  recipe_translations.py  serialization.py  spice_routes.py
app/services/ai/: gemini.py  llm.py  ollama.py  prompts.py  rate_limit.py
app/storage/: __init__.py  base.py  local.py
scripts/: README.md  audit_culinary_images.py  audit_recipe_images.py  audit_translation_quality.py  backfill_difficulty.py  backfill_recipe_translations.py  backfill_wikimedia_images.py  cuisine_expansion_v5_east_asia.py  cuisine_expansion_v6_original.py  cuisine_expansion_v7_myanmar.py  curated_data.py  fix_myanmar_cuisine_wires.py  fix_recipe_images.py  generate_east_asia_expansion.py  generate_myanmar_expansion.py  generate_original_expansion.py  myanmar_food_images.py  patch_stub_titles.py  recipe_images.py  release.sh  seed.py  seed_curated_recipes.py  seed_dev_users.py  strip_garbage_translations.py  translate_curated_recipes.py  translation_utils.py  wikimedia_lookup.py
tests/: conftest.py  test_ai.py  test_auth.py  test_client_ip.py  test_config_safety.py  test_culinary_image_audit.py  test_curated_translations.py  test_difficulty.py  test_favorites.py  test_firebase_resilience.py  test_llm_client.py  test_locale_request.py  test_mecipes.py  test_myanmar_food_images.py  test_ollama_client.py  test_recipe_images.py  test_recipe_throttle.py  test_serialization.py  test_spice_routes.py  test_translate_curated_sources.py  test_translation_utils.py  test_uploads.py
