[project]
name = "spiceroute-api"
version = "0.1.0"
description = "SpiceRoute management backend (FastAPI)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.1",
    "email-validator>=2.2.0",
    "greenlet>=3.1.1",
    "firebase-admin>=6.5.0",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.2",
    "aiosqlite>=0.20.0",
    "ruff>=0.7.4",
    "pyright>=1.1.390",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-m 'not network'"
markers = [
    "network: hits live external URLs (Wikimedia, Unsplash, etc.)",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's parameter helpers (File, Form, Body, Query, etc.) are the
# canonical idiom for declaring request parameters as function-arg defaults.
# They are immutable factories, so B008 does not apply.
extend-immutable-calls = [
    "fastapi.File",
    "fastapi.Form",
    "fastapi.Body",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Header",
    "fastapi.Cookie",
    "fastapi.Depends",
    "fastapi.Security",
]

[tool.pyright]
include = ["app", "scripts", "tests", "alembic"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
